fix visibility utility & mixin

--- a/src/less/core/mixins.less
+++ b/src/less/core/mixins.less
@@ -18,8 +18,10 @@
     height: 1px;
     opacity: 0;
     overflow: hidden;
+    padding: 0;
     position: absolute;
     width: 1px;
+    
 }
 
 .mixin-show() {
@@ -32,9 +34,10 @@
     height: unset;
     opacity: unset;
     overflow: unset;
+    padding: unset;
     position: unset;
     width: unset;
-    
+
 }
 
 .mixin-clearAppearance() {
