--- a/src/less/utilities/visibility-base.less
+++ b/src/less/utilities/visibility-base.less
@@ -5,7 +5,7 @@
 .vis-visible { visibility: visible !important; }
 .vis-hidden  { visibility: hidden !important; }
 
-.visible {}
+.visible { .mixin-show !important; }
 .hidden  { .mixin-hide !important; }
 
 /* uncss:ignore end */
